--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,119 @@
-# Compiled class file
-*.class
+######################
+# Project Specific
+######################
 
-# Log file
-*.log
+######################
+# Node
+######################
+/node/**
+/**/node_modules/**
 
-# BlueJ files
-*.ctxt
+######################
+# SASS
+######################
+.sass-cache/**
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+######################
+# Eclipse
+######################
+*.pydevproject
+.project
+.metadata
+/bin/**
+/tmp/**
+/tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/**
+/**/.settings/**
+.loadpath
+/src/main/resources/rebel.xml
 
-# Package Files #
+# External tool builders
+.externalToolBuilders/**
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+######################
+# Intellij
+######################
+.idea/**
+*.iml
+*.iws
+*.ipr
+*.ids
+*.orig
+
+######################
+# Maven
+######################
+/log/**
+target
+target/*
+
+######################
+# Gradle
+######################
+.gradle/**
+
+######################
+# Package Files
+######################
 *.jar
 *.war
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.db
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+######################
+# Windows
+######################
+# Windows image file caches
+Thumbs.db
+
+# Folder config file
+Desktop.ini
+
+######################
+# Mac OSX
+######################
+.DS_Store
+.svn
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+######################
+# Directories
+######################
+/build/**
+/bin/**
+/spring_loaded/**
+/deploy/**
+
+######################
+# Logs
+######################
+*.log
+
+######################
+# Others
+######################
+*.class
+*.*~
+*~
+.merge_file*
