add some message / marker matchers and JUnit rule

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -53,6 +53,12 @@
             <version>${logstash-logback-encoder.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.skjolber.log-domain</groupId>
+            <artifactId>log-domain-test-logback</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
