--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.github.skjolber.log-domain</groupId>
+                <artifactId>log-domain-test-logback</artifactId>    
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
@@ -254,6 +259,7 @@
 
     <modules>
         <module>support/logback</module>
+        <module>test/logback</module>
         <module>codegen</module>
         <module>maven-plugin</module>
         <module>example</module>
