--- a/codegen/pom.xml
+++ b/codegen/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>${json.version}</version>
+		</dependency>
         <dependency>
           <groupId>net.steppschuh.markdowngenerator</groupId>
           <artifactId>markdowngenerator</artifactId>
