--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <logstash-logback-encoder.version>4.10</logstash-logback-encoder.version>
+        <json.version>20170516</json.version>
 
         <junit.version>4.12</junit.version>
         <mockito.version>2.8.47</mockito.version>
@@ -121,6 +122,11 @@
                 <artifactId>logstash-logback-encoder</artifactId>
                 <version>${logstash-logback-encoder.version}</version>
             </dependency>
+			<dependency>
+			    <groupId>org.json</groupId>
+			    <artifactId>json</artifactId>
+			    <version>${json.version}</version>
+			</dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
