fix build for multimodule release (?)

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,7 +4,9 @@
     <groupId>com.github.skjolber</groupId>
     <artifactId>log-domain-maven-example</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-
+	<name>log-domain-maven-example</name>
+	<description>Example project for maven plugin</description>
+	
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
