--- a/support/logback/pom.xml
+++ b/support/logback/pom.xml
@@ -10,7 +10,9 @@
     </parent>
     
     <artifactId>log-domain-support-logback</artifactId>
-
+	<name>log-domain-support-logback</name>
+	<description>Support-library for generated sources</description>
+	
     <dependencies>
         <dependency>
             <groupId>net.logstash.logback</groupId>
@@ -25,4 +27,33 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
     </dependencies>
+    
+    <build>
+    	<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>    	
+    	</plugins>
+    </build>
 </project>
