--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.skjolber.log-domain</groupId>
 	<artifactId>log-domain-parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<name>log-domain-parent</name>
 	<description>Parent for log-domain modules</description>
@@ -32,7 +31,8 @@
 		<connection>scm:git:git@github.com:skjolber/log-domain.git</connection>
 		<developerConnection>scm:git:git@github.com:skjolber/log-domain.git</developerConnection>
 		<url>git@github.com:skjolber/log-domain.git</url>
-	</scm>
+	  <tag>log-domain-parent-1.0.0</tag>
+  </scm>
 
 	<issueManagement>
 		<system>GitHub</system>
