--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.skjolber.log-domain</groupId>
         <artifactId>log-domain-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>log-domain-maven-plugin</artifactId>
