--- a/maven-plugin/src/test/resources/unit/domain-log-codegen/pom.xml
+++ b/maven-plugin/src/test/resources/unit/domain-log-codegen/pom.xml
@@ -47,6 +47,11 @@
 					<outputDirectory>target/generated-sources/log-domain-codegen</outputDirectory>
 					<domains>
 						<domain>
+							<configuration>
+								<markdown>true</markdown>
+								<java>true</java>
+								<elastic>true</elastic>
+							</configuration>
 							<path>${basedir}/src/test/resources/network.yaml</path>
 						</domain>
 					</domains>
