--- a/examples/elastic-example/pom.xml
+++ b/examples/elastic-example/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.skjolber</groupId>
     <artifactId>log-domain-elastic-example</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
 	<name>log-domain-elastic-example</name>
 	<description>Example project for Elasticsearch mapping</description>
 	
@@ -105,7 +105,7 @@
             <plugin>
                 <groupId>com.github.skjolber.log-domain</groupId>
                 <artifactId>log-domain-maven-plugin</artifactId>
-                <version>1.0.1-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <executions>
                     <execution>
                         <id>generate</id>
