add jax-rs example

--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,7 @@
 			<modules>
 				<module>examples/maven-plugin-example</module>
 				<module>examples/elastic-example</module>
+				<module>examples/jax-rs-example</module>
 			</modules>			
 		</profile>
 	</profiles>
