--- a/examples/jax-rs-example/pom.xml
+++ b/examples/jax-rs-example/pom.xml
@@ -58,7 +58,13 @@
             <groupId>com.github.skjolber.log-domain</groupId>
             <artifactId>log-domain-support-logback</artifactId>    
             <version>${project.version}</version>
-        </dependency>    
+        </dependency>
+        <dependency>
+            <groupId>com.github.skjolber.log-domain</groupId>
+	        <artifactId>log-domain-support-logback-jax-rs</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
