add spring rest example

--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,7 @@
 				<module>examples/maven-plugin-example</module>
 				<module>examples/elastic-example</module>
 				<module>examples/jax-rs-example</module>
+				<module>examples/spring-rest-example</module>
 			</modules>			
 		</profile>
 	</profiles>
