--- a/support/logback/pom.xml
+++ b/support/logback/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.skjolber.log-domain</groupId>
         <artifactId>log-domain-parent</artifactId>
-        <version>1.0.2</version> 
+        <version>1.0.3-SNAPSHOT</version> 
         <relativePath>../..</relativePath>   
     </parent>
     
