--- a/maven-plugin/src/test/resources/unit/domain-log-codegen/pom.xml
+++ b/maven-plugin/src/test/resources/unit/domain-log-codegen/pom.xml
@@ -49,7 +49,10 @@
 						<domain>
 							<configuration>
 								<markdown>true</markdown>
-								<java>true</java>
+								<java>
+									<logback>true</logback>
+									<stackDriver>true</stackDriver>
+								</java>
 								<elastic>true</elastic>
 							</configuration>
 							<path>${basedir}/src/test/resources/network.yaml</path>
