--- a/examples/maven-plugin-example/pom.xml
+++ b/examples/maven-plugin-example/pom.xml
@@ -96,6 +96,11 @@
                 </executions>
                 <configuration>
                     <outputDirectory>target/generated-sources/domain-log-codegen</outputDirectory>
+					<types>
+						<java>
+							<logback>true</logback>
+						</java>
+					</types>
                     <domains>
                         <domain>
                             <path>${basedir}/src/main/resources/yaml/network.yaml</path>
