--- a/examples/gradle-plugin-example/settings.gradle
+++ b/examples/gradle-plugin-example/settings.gradle
@@ -15,4 +15,4 @@ include 'api'
 include 'services:webservice'
 */
 
-rootProject.name = 'gradle-plugin-example'
+rootProject.name = 'log-domain-gradle-plugin-example'
