--- a/examples/gradle-plugin-example/build.gradle
+++ b/examples/gradle-plugin-example/build.gradle
@@ -13,15 +13,6 @@ buildscript{
 apply plugin: 'java'
 apply plugin: 'com.github.skjolber.json-log-domain'
 
-incrementalReverse  {
-	definitions = files(
-		'src/main/resources/network.yaml', 
-		'src/main/resources/language.yaml', 
-		'src/main/resources/global.yaml'
-		)
-}
-
-
 jsonLogDomain { 
 	definitions = files(
 		'src/main/resources/network.yaml', 
@@ -33,6 +24,7 @@ jsonLogDomain {
 	}
 	
 	markdown {
+		logback false
 	}
 	
 	elastic {
