--- a/examples/elastic-example/pom.xml
+++ b/examples/elastic-example/pom.xml
@@ -115,7 +115,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <outputDirectory>target/generated-sources/domain-log-codegen</outputDirectory>
+                    <outputDirectory>${project.build.directory}/generated-sources/domain-log-codegen</outputDirectory>
                    	<types>
                    		<elastic>true</elastic>
                    	</types>
