--- a/examples/stackdriver-maven-plugin-example/pom.xml
+++ b/examples/stackdriver-maven-plugin-example/pom.xml
@@ -13,7 +13,6 @@
 		<dependency>
 			<groupId>com.google.cloud</groupId>
 			<artifactId>google-cloud-logging</artifactId>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.skjolber.log-domain</groupId>
@@ -37,7 +36,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<outputDirectory>target/generated-sources/domain-log-codegen</outputDirectory>
+					<outputDirectory>${project.build.directory}/generated-sources/domain-log-codegen</outputDirectory>
 					<domains>
 						<domain>
 							<types>
