--- a/codegen/pom.xml
+++ b/codegen/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>log4j-over-slf4j</artifactId>
         </dependency>
         <dependency>
+			<groupId>com.github.skjolber.logback-logstash-more-decorators</groupId>
+			<artifactId>logback-logstash-more-decorators</artifactId>
+			<scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
