--- a/examples/jax-rs-example/pom.xml
+++ b/examples/jax-rs-example/pom.xml
@@ -21,7 +21,7 @@
 
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-
+		<jackson.version>2.9.3</jackson.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.8.47</mockito.version>
         <hamcrest.version>1.3</hamcrest.version>
@@ -30,8 +30,24 @@
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
 		<jersey.version>2.25.1</jersey.version>
+        <logback-logstash-more-decorators.version>1.0.0-SNAPSHOT</logback-logstash-more-decorators.version>
         
     </properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>		
+		</dependencies>
+	</dependencyManagement>
 
     <dependencies>
 		<dependency>
@@ -70,7 +86,12 @@
 	        <artifactId>log-domain-support-logback-jax-rs</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+        <dependency>
+			<groupId>com.github.skjolber.logback-logstash-more-decorators</groupId>
+			<artifactId>logback-logstash-more-decorators</artifactId>	        
+			<version>${logback-logstash-more-decorators.version}</version>
+			<scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
