--- a/examples/spring-rest-example/pom.xml
+++ b/examples/spring-rest-example/pom.xml
@@ -26,12 +26,29 @@
         <mockito.version>2.8.47</mockito.version>
         <hamcrest.version>1.3</hamcrest.version>
 
+		<jackson.version>2.9.3</jackson.version>
         <logstash-logback-encoder.version>4.10</logstash-logback-encoder.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
 		<jersey.version>2.25.1</jersey.version>
         
+        <logback-logstash-more-decorators.version>1.0.0-SNAPSHOT</logback-logstash-more-decorators.version>
     </properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>		
+		</dependencies>
+	</dependencyManagement>
 
     <dependencies>
 		<dependency>
@@ -64,6 +81,12 @@
             <artifactId>logstash-logback-encoder</artifactId>
             <version>${logstash-logback-encoder.version}</version>
         </dependency>
+        <dependency>
+			<groupId>com.github.skjolber.logback-logstash-more-decorators</groupId>
+			<artifactId>logback-logstash-more-decorators</artifactId>	        
+			<version>${logback-logstash-more-decorators.version}</version>
+			<scope>test</scope>
+        </dependency>        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-undertow</artifactId>
