--- a/support/logback-jax-rs/pom.xml
+++ b/support/logback-jax-rs/pom.xml
@@ -38,6 +38,11 @@
 		    <version>${jax-rs.version}</version>
 		</dependency>
         <dependency>
+			<groupId>com.github.skjolber.logback-logstash-more-decorators</groupId>
+			<artifactId>logback-logstash-more-decorators</artifactId>
+			<scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
