--- a/test/logback/pom.xml
+++ b/test/logback/pom.xml
@@ -20,7 +20,11 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-        </dependency>        
+        </dependency>
+        <dependency>
+			<groupId>com.github.skjolber.logback-logstash-more-decorators</groupId>
+			<artifactId>logback-logstash-more-decorators</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
