--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 		<stackdriver.version>1.14.0</stackdriver.version>
 		<google-cloud-logging-logback.version>0.32.0-alpha</google-cloud-logging-logback.version>
 		<jackson.version>2.9.3</jackson.version>
-		<logback-logstash-more-decorators.version>1.0.0-SNAPSHOT</logback-logstash-more-decorators.version>
+		<logback-logstash-syntax-highlighting-decorators.version>1.0.0</logback-logstash-syntax-highlighting-decorators.version>
 		<junit.version>4.12</junit.version>
 		<mockito.version>2.11.0</mockito.version>
 		<hamcrest.version>1.3</hamcrest.version>
@@ -163,9 +163,9 @@
 				<version>${google-cloud-logging-logback.version}</version>
 			</dependency>
 	        <dependency>
-				<groupId>com.github.skjolber.logback-logstash-more-decorators</groupId>
-				<artifactId>logback-logstash-more-decorators</artifactId>	        
-				<version>${logback-logstash-more-decorators.version}</version>
+				<groupId>com.github.skjolber.logback-logstash-syntax-highlighting-decorators</groupId>
+				<artifactId>logback-logstash-syntax-highlighting-decorators</artifactId>	        
+				<version>${logback-logstash-syntax-highlighting-decorators.version}</version>
 	        </dependency>
 			<dependency>
 				<groupId>junit</groupId>
