--- a/examples/jax-rs-example/pom.xml
+++ b/examples/jax-rs-example/pom.xml
@@ -30,7 +30,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
 		<jersey.version>2.25.1</jersey.version>
-        <logback-logstash-more-decorators.version>1.0.0-SNAPSHOT</logback-logstash-more-decorators.version>
+        <logback-logstash-more-decorators.version>1.0.0</logback-logstash-more-decorators.version>
         
     </properties>
 
