--- a/examples/spring-rest-example/pom.xml
+++ b/examples/spring-rest-example/pom.xml
@@ -32,7 +32,7 @@
         <logback.version>1.2.3</logback.version>
 		<jersey.version>2.25.1</jersey.version>
         
-        <logback-logstash-more-decorators.version>1.0.0-SNAPSHOT</logback-logstash-more-decorators.version>
+        <logback-logstash-syntax-highlighting-decorators.version>1.0.0</logback-logstash-syntax-highlighting-decorators.version>
     </properties>
 
 	<dependencyManagement>
@@ -82,9 +82,9 @@
             <version>${logstash-logback-encoder.version}</version>
         </dependency>
         <dependency>
-			<groupId>com.github.skjolber.logback-logstash-more-decorators</groupId>
-			<artifactId>logback-logstash-more-decorators</artifactId>	        
-			<version>${logback-logstash-more-decorators.version}</version>
+			<groupId>com.github.skjolber.logback-logstash-syntax-highlighting-decorators</groupId>
+			<artifactId>logback-logstash-syntax-highlighting-decorators</artifactId>	        
+			<version>${logback-logstash-syntax-highlighting-decorators.version}</version>
 			<scope>test</scope>
         </dependency>        
 		<dependency>
