--- a/codegen/pom.xml
+++ b/codegen/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.skjolber.log-domain</groupId>
         <artifactId>log-domain-parent</artifactId>
-        <version>1.0.3-SNAPSHOT</version>    
+        <version>1.0.3</version>    
     </parent>
     
     <artifactId>log-domain-codegen</artifactId>
