--- a/support/stackdriver/pom.xml
+++ b/support/stackdriver/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.log-domain</groupId>
 		<artifactId>log-domain-parent</artifactId>
-		<version>1.0.3</version>
+		<version>1.0.4-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
