--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -22,7 +22,7 @@ plugins {
 apply from: "$rootDir/gradle/functional-test.gradle"
 
 group 'com.github.skjolber.json-log-domain.gradle'
-version '1.0.3-SNAPSHOT'
+version '1.0.3'
 
 gradlePlugin {
   plugins {
@@ -36,7 +36,7 @@ gradlePlugin {
 dependencies {
 	compile gradleApi()
 	
-    compile('com.github.skjolber.log-domain:log-domain-codegen:1.0.3-SNAPSHOT'){
+    compile('com.github.skjolber.log-domain:log-domain-codegen:1.0.3'){
 	    exclude module: 'logback-classic'
     }
 
@@ -61,7 +61,7 @@ pluginBundle {
     
 	      id = 'com.github.skjolber.json-log-domain'
 	      displayName = 'json-log-domain gradle plugin'
-	      version '1.0.3-SNAPSHOT'
+	      version '1.0.3'
     }
   }
 }
