variuos gradle improvements

--- a/examples/gradle-plugin-example/build.gradle
+++ b/examples/gradle-plugin-example/build.gradle
@@ -4,7 +4,7 @@ buildscript{
 		mavenLocal()
 		
 	    dependencies {
-	        classpath 'com.github.skjolber.json-log-domain.gradle:log-domain-gradle-plugin:+'
+	        classpath 'com.github.skjolber.json-log-domain.gradle:log-domain-gradle-plugin:1.0.4-SNAPSHOT'
 	    }
 		
     }
