--- a/examples/elastic-example/pom.xml
+++ b/examples/elastic-example/pom.xml
@@ -11,16 +11,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <junit.version>4.12</junit.version>
-        <mockito.version>2.15.0</mockito.version>
+        <mockito.version>2.17.0</mockito.version>
         <hamcrest.version>1.3</hamcrest.version>
 
-        <logstash-logback-encoder.version>4.11</logstash-logback-encoder.version>
+        <logstash-logback-encoder.version>5.0</logstash-logback-encoder.version>
+        <commons-io.version>2.6</commons-io.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
+        <json.version>20180130</json.version>
     </properties>
 
     <dependencies>
@@ -62,12 +64,12 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20170516</version>
+			<version>${json.version}</version>
 		</dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.5</version>
+            <version>${commons-io.version}</version>
         </dependency>		
         <dependency>
             <groupId>com.github.skjolber.log-domain</groupId>
